ABGIR - Unfinished Project build 5

--- a/src/app/view/Result.fxml
+++ b/src/app/view/Result.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.MainController">
+<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
     <children>
         <StackPane prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -56,10 +56,18 @@
                                                          </HBox.margin>
                                                       </Text>
                                                    </children>
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" />
+                                                   </VBox.margin>
                                                 </HBox>
                                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Age:" />
+                                                      <Text fx:id="PatientAge" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -68,6 +76,11 @@
                                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Ph:" />
+                                                      <Text fx:id="PatientPh" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -76,6 +89,11 @@
                                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Pco:" />
+                                                      <Text fx:id="PatientPco" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -84,6 +102,11 @@
                                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Hco:" />
+                                                      <Text fx:id="PatientHco" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -92,6 +115,11 @@
                                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Oxygen Saturation:" />
+                                                      <Text fx:id="PatientFio" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -100,6 +128,11 @@
                                                 <HBox prefHeight="48.0" prefWidth="409.0">
                                                    <children>
                                                       <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Result:" />
+                                                      <Text fx:id="PatientResult" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="5.0" />
+                                                         </HBox.margin>
+                                                      </Text>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -107,7 +140,7 @@
                                                 </HBox>
                                                 <HBox prefHeight="182.0" prefWidth="409.0">
                                                    <children>
-                                                      <TextArea prefHeight="72.0" prefWidth="415.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" />
+                                                      <TextArea fx:id="UserComment" prefHeight="72.0" prefWidth="415.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" />
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -128,14 +161,9 @@
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="InterpretData" mnemonicParsing="false" onMouseClicked="#interpret" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit">
+                              <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#Doneinterp" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit">
                                  <HBox.margin>
                                     <Insets left="15.0" top="20.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button fx:id="prevButton" mnemonicParsing="false" onMouseClicked="#backPage" prefWidth="180.0" style="-fx-background-color: #fe4451; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Return">
-                                 <HBox.margin>
-                                    <Insets left="20.0" top="20.0" />
                                  </HBox.margin>
                               </Button>
                            </children>
