--- a/src/app/view/Home.fxml
+++ b/src/app/view/Home.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -10,16 +11,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: Transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
+<AnchorPane prefHeight="500.0" prefWidth="850.0" style="-fx-background-color: Transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
     <children>
-        <StackPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <StackPane alignment="TOP_LEFT" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
                 <DropShadow />
             </effect>
             <children>
-            <HBox maxHeight="180.0" prefHeight="0.0" prefWidth="700.0" style="-fx-background-color: white;">
+            <HBox maxHeight="180.0" prefHeight="104.0" prefWidth="830.0" style="-fx-background-color: white;">
                <StackPane.margin>
-                  <Insets bottom="290.0" />
+                  <Insets />
                </StackPane.margin>
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -42,87 +43,116 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                   </VBox>
-               </children>
-            </HBox>
-                <HBox prefHeight="100.0" prefWidth="200.0">
-                    <children>
-                  <HBox alignment="BASELINE_RIGHT" maxHeight="100.0" prefHeight="100.0" prefWidth="226.0">
-                     <children>
-                        <VBox prefHeight="100.0" prefWidth="208.0">
+                      <HBox alignment="TOP_RIGHT" prefHeight="42.0" prefWidth="471.0">
+                          <children>
+                        <HBox alignment="BASELINE_RIGHT" maxHeight="100.0" prefHeight="100.0" prefWidth="226.0">
                            <children>
-                              <VBox prefHeight="112.0" prefWidth="170.0">
+                              <VBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="208.0">
                                  <children>
-            
-                  
-                                            <fx:include source="title_bar.fxml" />
-                                    <HBox prefHeight="100.0" prefWidth="300.0">
+                                    <VBox prefHeight="112.0" prefWidth="170.0">
                                        <children>
-                                          <VBox prefHeight="47.0" prefWidth="174.0">
+                  
+                        
+                                                  <fx:include source="title_bar.fxml" />
+                                          <HBox prefHeight="100.0" prefWidth="300.0">
                                              <children>
-                                                <VBox prefHeight="200.0" prefWidth="100.0">
+                                                <VBox prefHeight="100.0" prefWidth="200.0">
                                                    <children>
-                                                      <Text fx:id="UserWelcome" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand;" text="Welcome,">
-                                                         <VBox.margin>
-                                                            <Insets bottom="5.0" />
-                                                         </VBox.margin>
-                                                      </Text>
+                                                      <VBox prefHeight="200.0" prefWidth="100.0">
+                                                         <children>
+                                                            <Text fx:id="UserWelcome" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand;" text="Welcome,">
+                                                               <VBox.margin>
+                                                                  <Insets bottom="5.0" />
+                                                               </VBox.margin>
+                                                            </Text>
+                                                         </children>
+                                                      </VBox>
+                                                      <VBox prefHeight="200.0" prefWidth="100.0">
+                                                         <children>
+                                                            <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="100.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout" />
+                                                         </children>
+                                                      </VBox>
                                                    </children>
-                                                </VBox>
-                                                <VBox prefHeight="200.0" prefWidth="100.0">
-                                                   <children>
-                                                      <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="100.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout" />
-                                                   </children>
+                                                   <HBox.margin>
+                                                      <Insets left="10.0" />
+                                                   </HBox.margin>
+                                                   <padding>
+                                                      <Insets bottom="10.0" />
+                                                   </padding>
                                                 </VBox>
                                              </children>
-                                          </VBox>
+                                          </HBox>
                                        </children>
-                                    </HBox>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </VBox>
                                  </children>
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="20.0" right="10.0" />
-                                 </VBox.margin>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
                               </VBox>
                            </children>
                            <HBox.margin>
-                              <Insets bottom="10.0" />
+                              <Insets />
+                           </HBox.margin>
+                        </HBox>
+                          </children>
+                      </HBox>
+               </children>
+            </HBox>
+            <HBox maxHeight="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" StackPane.alignment="CENTER">
+               <StackPane.margin>
+                  <Insets top="110.0" />
+               </StackPane.margin>
+               <children>
+                  <HBox onMouseClicked="#Viewpatients" style="-fx-background-color: white;">
+                     <children>
+                        <VBox fx:id="Viewbox" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;">
+                           <children>
+                              <ImageView fitHeight="385.0" fitWidth="240.0" pickOnBounds="true" preserveRatio="true" style="-fx-border-color: black;">
+                                 <image>
+                                    <Image url="@../assets/viewPatient.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="10.0" />
                            </HBox.margin>
                         </VBox>
                      </children>
-                     <HBox.margin>
-                        <Insets left="500.0" />
-                     </HBox.margin>
                   </HBox>
-                    </children>
-                </HBox>
-            <HBox maxHeight="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;">
-               <StackPane.margin>
-                  <Insets top="100.0" />
-               </StackPane.margin>
-               <children>
-                  <HBox onMouseClicked="#Viewpatients" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #E0FFFF;">
-                     <children>
-                        <VBox fx:id="Viewbox" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="VIEW PATIENTS" />
-                           </children>
-                        </VBox>
-                     </children></HBox>
-                  <HBox onMouseClicked="#Interpretpatients" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #B0E0E6;">
+                  <HBox onMouseClicked="#Interpretpatients" style="-fx-background-color: #B0E0E6;">
                      <children>
                         <VBox fx:id="InterpretBox" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="INTERPRET DATA" />
+                              <ImageView fitHeight="385.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/Interpret.jpg" />
+                                 </image>
+                              </ImageView>
                            </children>
                         </VBox>
-                     </children></HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #E0FFFF;">
+                     </children>
+                  </HBox>
+                  <HBox onMouseClicked="#UpdateData" style="-fx-background-color: #E0FFFF;">
                      <children>
-                        <ImageView fitHeight="385.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                     </children></HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #B0E0E6;">
+                        <ImageView fitHeight="385.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/Update.jpg" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <HBox onMouseClicked="#abgAlgo" style="-fx-background-color: #B0E0E6;">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                     </children></HBox>
+                        <ImageView fitHeight="385.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/Algo.jpg" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
                </children>
             </HBox>
             </children>
