--- a/src/app/view/UserType.fxml
+++ b/src/app/view/UserType.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.UserStartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="520.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.UserStartController">
     <children>
         <StackPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -17,7 +18,7 @@
             <children>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <VBox style="-fx-background-color: fdfd96;" HBox.hgrow="ALWAYS" />
+                        <VBox style="-fx-background-color: b1dbff;" HBox.hgrow="ALWAYS" />
                         <VBox style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
 
                             <children>
@@ -34,14 +35,27 @@
                         <Insets bottom="45.0" left="45.0" right="45.0" top="45.0" />
                     </StackPane.margin>
                <children>
-                  <VBox fx:id="userSignin" alignment="CENTER" onMouseClicked="#goUser" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black;">
+                  <VBox fx:id="userSignin" alignment="CENTER" onMouseClicked="#goUser" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black; -fx-background-color: white;">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 40;" text="SIGN IN AS USER" />
+                        <ImageView fitHeight="150.0" fitWidth="390.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/User.jpg" />
+                           </image>
+                        </ImageView>
                      </children>
                   </VBox>
-                  <VBox fx:id="adminSignin" alignment="CENTER" onMouseClicked="#goAdmin" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black;">
+                  <VBox prefHeight="16.0" prefWidth="392.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 40;" text="SIGN IN AS ADMIN" />
+                        <ImageView fitHeight="8.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="adminSignin" alignment="CENTER" onMouseClicked="#goAdmin" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: black; -fx-background-color: white;">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/Admin.jpg" />
+                           </image>
+                        </ImageView>
                      </children>
                   </VBox>
                </children>
