--- a/src/app/view/Login.fxml
+++ b/src/app/view/Login.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="822.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="975.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.LoginController">
     <children>
       <Text fx:id="userfname" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: White;" />
         <StackPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -24,7 +24,7 @@
             <children>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <VBox onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="480.0" prefWidth="284.0" style="-fx-background-color: fdfd96;" HBox.hgrow="ALWAYS" />
+                        <VBox onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="480.0" prefWidth="284.0" style="-fx-background-color: #f1c40f;" HBox.hgrow="ALWAYS" />
                         <VBox alignment="TOP_RIGHT" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
 
                             <children>
@@ -36,32 +36,32 @@
                         </VBox>
                     </children>
                 </HBox>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                <VBox alignment="CENTER" prefHeight="542.0" prefWidth="799.0">
                     <StackPane.margin>
                         <Insets bottom="45.0" left="45.0" right="45.0" top="45.0" />
                     </StackPane.margin>
                     <children>
-                        <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="388.0" prefWidth="757.0" style="-fx-background-color: white;">
+                        <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="487.0" prefWidth="831.0" style="-fx-background-color: white;">
                             <effect>
                                 <DropShadow />
                             </effect>
                             <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER" prefHeight="83.0" prefWidth="811.0">
                            <children>
                               <ImageView fitHeight="127.0" fitWidth="122.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/314704_107134206064664_1588665997_n.jpg" />
+                                    <Image url="@../assets/logo.png" />
                                  </image>
                               </ImageView>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                              <VBox alignment="CENTER" prefHeight="92.0" prefWidth="391.0">
                                  <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="Arterial Blood Gas" />
-                                    <Text layoutX="10.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="Information Reader" />
+                                            <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="UST Hospital " />
+                                    <Text layoutX="10.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="Center For Respiratory Medicine" />
                                  </children>
                               </VBox>
                               <ImageView fitHeight="126.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../assets/logo.png" />
+                                    <Image url="@../assets/314704_107134206064664_1588665997_n.jpg" />
                                  </image>
                                  <HBox.margin>
                                     <Insets left="10.0" />
@@ -69,13 +69,13 @@
                               </ImageView>
                            </children>
                         </HBox>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="UST Hospital Center For Respiratory Medicine" />
-                                <HBox alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="250.0" style="-fx-background-color: white; -fx-border-color: #a2a2a2; -fx-border-width: 0px 0px 2px 0px;">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 2em; -fx-font-family: Quicksand; -fx-font-weight: bold; -fx-fill: #000000;" text="Arterial Blood Gas Information Reader" />
+                                <HBox alignment="CENTER_RIGHT" maxWidth="-Infinity" prefHeight="37.0" prefWidth="304.0" style="-fx-background-color: white; -fx-border-color: #a2a2a2; -fx-border-width: 0px 0px 2px 0px;">
                                     <VBox.margin>
                                         <Insets top="30.0" />
                                     </VBox.margin>
                                     <children>
-                                        <TextField fx:id="tf_username" promptText="Username" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS">
+                                        <TextField fx:id="tf_username" promptText="Username" style="-fx-background-color: transparent; -fx-font-size: 15;" HBox.hgrow="ALWAYS">
                                             <HBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                             </HBox.margin>
@@ -88,9 +88,9 @@
                                     </children>
                                 </HBox>
                         <Text fx:id="errorLogin" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 12; -fx-fill: Red;" />
-                                <HBox alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="250.0" style="-fx-background-color: white; -fx-border-color: #a2a2a2; -fx-border-width: 0px 0px 2px 0px;">
+                                <HBox alignment="CENTER_RIGHT" maxWidth="-Infinity" prefHeight="37.0" prefWidth="309.0" style="-fx-background-color: white; -fx-border-color: #a2a2a2; -fx-border-width: 0px 0px 2px 0px;">
                                     <children>
-                                        <PasswordField fx:id="pf_password" promptText="Password" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS">
+                                        <PasswordField fx:id="pf_password" promptText="Password" style="-fx-background-color: transparent; -fx-font-size: 15;" HBox.hgrow="ALWAYS">
                                             <HBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                             </HBox.margin>
@@ -105,12 +105,12 @@
                                         <Insets top="30.0" />
                                     </VBox.margin>
                                 </HBox>
-                                <Button fx:id="login" mnemonicParsing="false" onMouseClicked="#login" prefWidth="180.0" style="-fx-background-color: #fdfd96; -fx-background-radius: 100PX; -fx-text-fill: black; -fx-font-weight: Bold;" text="Login">
+                                <Button fx:id="login" mnemonicParsing="false" onMouseClicked="#login" prefWidth="180.0" style="-fx-background-color: #f1c40f; -fx-background-radius: 100PX; -fx-text-fill: black; -fx-font-weight: Bold;" text="Login">
                                     <VBox.margin>
                                         <Insets top="30.0" />
                                     </VBox.margin>
                                 </Button>
-                                <HBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                                <HBox alignment="BOTTOM_CENTER" prefHeight="111.0" prefWidth="811.0" VBox.vgrow="ALWAYS">
                                     <padding>
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                     </padding>
