--- a/src/app/view/Result.fxml
+++ b/src/app/view/Result.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
+<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
     <children>
         <StackPane prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -32,102 +32,33 @@
                                  <children>
                                     <HBox prefHeight="573.0" prefWidth="700.0">
                                        <children>
-                                          <VBox prefHeight="433.0" prefWidth="467.0">
+                                          <VBox prefHeight="573.0" prefWidth="968.0">
                                              <children>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
+                                                <HBox>
                                                    <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Patient Firstname:" />
-                                                      <Text fx:id="PatientFirstName" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 14;" text="Patient Record:">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </Text>
+                                                      <Text fx:id="PatientFirstName" layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 14;" text="Juan">
                                                          <HBox.margin>
                                                             <Insets left="5.0" />
                                                          </HBox.margin>
                                                       </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Patient Lastname:" />
-                                                      <Text fx:id="PatientLastName" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                      <Text fx:id="PatientLastName" layoutX="88.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 14;" text="Dela Cruz">
                                                          <HBox.margin>
-                                                            <Insets left="5.0" />
+                                                            <Insets left="3.0" />
                                                          </HBox.margin>
                                                       </Text>
                                                    </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
                                                 </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
+                                                <HBox prefHeight="34.0" prefWidth="656.0">
                                                    <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Age:" />
-                                                      <Text fx:id="PatientAge" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Result:">
                                                          <HBox.margin>
-                                                            <Insets left="5.0" />
-                                                         </HBox.margin>
-                                                      </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Ph:" />
-                                                      <Text fx:id="PatientPh" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
-                                                         <HBox.margin>
-                                                            <Insets left="5.0" />
-                                                         </HBox.margin>
-                                                      </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Pco:" />
-                                                      <Text fx:id="PatientPco" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
-                                                         <HBox.margin>
-                                                            <Insets left="5.0" />
-                                                         </HBox.margin>
-                                                      </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Hco:" />
-                                                      <Text fx:id="PatientHco" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
-                                                         <HBox.margin>
-                                                            <Insets left="5.0" />
-                                                         </HBox.margin>
-                                                      </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="100.0" prefWidth="200.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Oxygen Saturation:" />
-                                                      <Text fx:id="PatientFio" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
-                                                         <HBox.margin>
-                                                            <Insets left="5.0" />
-                                                         </HBox.margin>
-                                                      </Text>
-                                                   </children>
-                                                   <VBox.margin>
-                                                      <Insets left="5.0" />
-                                                   </VBox.margin>
-                                                </HBox>
-                                                <HBox prefHeight="48.0" prefWidth="409.0">
-                                                   <children>
-                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" text="Result:" />
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin></Text>
                                                       <Text fx:id="PatientResult" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
                                                          <HBox.margin>
                                                             <Insets left="5.0" />
@@ -135,23 +66,21 @@
                                                       </Text>
                                                    </children>
                                                    <VBox.margin>
-                                                      <Insets left="5.0" />
+                                                      <Insets left="5.0" top="5.0" />
                                                    </VBox.margin>
                                                 </HBox>
-                                                <HBox prefHeight="182.0" prefWidth="409.0">
+                                                <HBox prefHeight="524.0" prefWidth="655.0">
                                                    <children>
-                                                      <TextArea fx:id="UserComment" prefHeight="72.0" prefWidth="415.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;" />
+                                                      <TextArea fx:id="UserComment" prefHeight="524.0" prefWidth="658.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin></TextArea>
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
                                                    </VBox.margin>
                                                 </HBox>
                                              </children>
-                                          </VBox>
-                                          <VBox prefHeight="401.0" prefWidth="299.0">
-                                             <HBox.margin>
-                                                <Insets left="40.0" />
-                                             </HBox.margin>
                                           </VBox>
                                        </children>
                                     </HBox>
@@ -161,11 +90,19 @@
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#Doneinterp" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit">
+                              <VBox alignment="CENTER" prefHeight="86.0" prefWidth="186.0">
+                                 <children>
+                                    <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#Doneinterp" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit" />
+                                 </children>
                                  <HBox.margin>
-                                    <Insets left="15.0" top="20.0" />
+                                    <Insets left="10.0" />
                                  </HBox.margin>
-                              </Button>
+                              </VBox>
+                              <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="86.0" prefWidth="186.0">
+                                 <HBox.margin>
+                                    <Insets left="10.0" />
+                                 </HBox.margin>
+                              </VBox>
                            </children>
                         </HBox>
 
