--- a/src/app/view/title_bar.fxml
+++ b/src/app/view/title_bar.fxml
@@ -4,23 +4,22 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 
-
-<HBox alignment="CENTER_RIGHT" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TitleBarController">
+<HBox alignment="CENTER_RIGHT" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TitleBarController">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <children>
-        <FontAwesomeIconView fill="#fed330" glyphName="CIRCLE" onMouseClicked="#min">
+        <FontAwesomeIconView fill="#fed330" glyphName="MINUS" onMouseClicked="#min" size="15">
             <HBox.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
         </FontAwesomeIconView>
-        <FontAwesomeIconView fill="#26de81" glyphName="CIRCLE" onMouseClicked="#max">
+        <FontAwesomeIconView fill="#26de81" glyphName="CLONE" onMouseClicked="#max">
             <HBox.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
         </FontAwesomeIconView>
-        <FontAwesomeIconView fill="#ff3b49" glyphName="CIRCLE" onMouseClicked="#close">
+        <FontAwesomeIconView fill="#ff3b49" glyphName="CLOSE" onMouseClicked="#close" size="15">
             <HBox.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
